# algoritmi2

./: .gitignore  LICENSE  README.md  __init__.py  es1.py  es2.py  main.py  pyproject.toml
algo1/: Definizioni.md  alberoDiRicerca.py  algoritmiOrdinamento.py  bucketSort.py  heapSort.py  lez7marzo.py  mergeSort.py  struttureDati.py
algo1/esPreparazioneEsame/: alberi.py  es1.py  esame13giugno2024.py  esameFebbraio2.py  esameGennaio.py  esameLuglio22.py  francobolli.py  heapSort.py  liste_puntate.py
algo1/lez/: lez11marzo.md
algo1/lez11marzo/: lez11marzo.py  lez11marzo.py.py
algo1/preparazioneesonero/: 21_03_22.py
algo2/: Definizioni.md  __init__.py  camminiMassimi.py  cavallopazzo.py  cavallopazzof.py  cercaNodoPartenza.py  esamemarzo20.py  essalvo.py  essett6.py  lez15maggio.py  programmazioneDinamica.PY  sottostringheDiSommaMassima.py  spanningTree.py
algo2/altri_algoritmi/: archi_pesati.py  bfs.py  edge_types.py  sort_topologico.py  spanning_tree.py  trova_ponti.py
algo2/backtracking/: backtracking.py
algo2/batteria 1 /: es1.py
algo2/batteria1/: __init__.py  esTeoriciF.md  esTeoriciF.txt  esTeoriciLS.md
algo2/batteria2/: dijkstra.py  es_teoriciF.md
algo2/batteria3/: es2.py  es2f.py  es3.py  es3f.py  es4f.py  es5.py  es5f.py  es7f.py  es7f2.py
algo2/batteria5/: alfabetoABC.py  coin_change.py  es9f.py  esercizi3.py  piastrellamento.py  stringhe_ternarie.py
algo2/batteria6/: es10.py  es12.py  es13.py  es1f.py  (+3 more)
draw/: __init__.py  draw.py  pyproject.toml  strut.py
esercizi/: es2.py  es7.py  es8.py  es9.py  esEsameAlgo1.py
test/: test_es2.py
(+36 files in other folders)
